feat(ai): 引入音频模型配置基类和多模态服务
- 新增 AbstractAudioModelConfig 抽象类，承载音频模型共用的鉴权和端点字段
- 重构 AiChatClientFactory 以支持新的 AiChatModel 配置结构
- 实现 API Key 池管理功能，支持多密钥轮询和限流控制
- 添加 AiChatModel 和 AiChatModelOptions 配置类替代旧的模型配置
- 更新 AiChatOptionsResolver 适配新的配置选项结构
- 重命名 AiModelService 为 AiChatService 并更新其实现类
- 创建 AiMultimodalService 接口及其实现以支持多模态能力
- 集成语音聊天模型和相关服务实现
- 添加多种鉴权模式的支持（Bearer、TC3、AppCode、HMAC）